--- a/public/stylesheets/simple-graph.css
+++ b/public/stylesheets/simple-graph.css
@@ -1,15 +1,23 @@
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+  line-height: 1;
+}
+html,body {
+   width:100%;
+   height:100%;
+ }
 .graph {
   position: relative;
   width:100%;
   border-left:1px solid #000;
   border-bottom:1px solid #000;
-  height:800px;
+  height:600px;
 }
 .col {
   position: absolute;
-  width: 10px;
-  height: 800px;
-  margin: 0 5px 0 0;
   bottom: 0;
 }
 .bar {
