--- a/public/stylesheets/simple-graph.css
+++ b/public/stylesheets/simple-graph.css
@@ -30,14 +30,16 @@ html,body {
   position: absolute;
 }
 .col h1 {
+  border-left: 1px solid #000;
   font-size: .8rem;
+  padding: .2rem;
   position: absolute;
-  transform: rotate(270deg);
+/*  transform: rotate(270deg);
   -ms-transform: rotate(270deg);
-  -webkit-transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);*/
   z-index: 2;
   left:0;
-  bottom:0;
+  bottom:-3rem;
 }
 .bar {
   left:0;
